--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,10 +2,19 @@ services:
   - type: web
     name: arbitraggio-backend
     runtime: python
-    buildCommand: pip install -r requirements.txt
+    rootDir: backend
+    buildCommand: pip install -r requirements-deploy.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: DATABASE_URL
         value: sqlite+aiosqlite:///./arbitraggio.db
+      - key: SCRAPER_API_KEY
+        sync: false
+      - key: OPENAI_API_KEY
+        sync: false
+      - key: TELEGRAM_BOT_TOKEN
+        sync: false
+      - key: TELEGRAM_CHAT_ID
+        sync: false
