--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,10 +9,10 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for caching
-COPY requirements.txt .
+COPY requirements-deploy.txt .
 
 # Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements-deploy.txt
 
 # Copy application code
 COPY . .
@@ -20,6 +20,8 @@ COPY . .
 # Create directories
 RUN mkdir -p /app/data/images
 
-EXPOSE 8000
+# Use PORT env var from Render
+ENV PORT=8000
+EXPOSE $PORT
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD uvicorn app.main:app --host 0.0.0.0 --port $PORT
